# sxm-streamer

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  publish-dev.sh  pyproject.toml  requirements.txt
.github/workflows/: pr.yml  publish.yml
sxm_streamer/: __init__.py  __main__.py  cli.py  id3.py  server.py
